<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">电源管理</string>
    <string name="settings">设置</string>
    <string name="help_info">使用帮助</string>
    <string name="allow_box">允许</string>
    <string name="forbid_box">禁止</string>
    <string name="OK">确认</string>
    <string name="cancel">取消</string>
    <string name="detail">详情</string>
    <string name="basicPref">基本选项</string>
    <string name="connPref">连接选项</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="unknown">未知</string>
    <string name="not_implemented">尚未实现</string>

    <string-array name="tab_names">
        <item>快捷菜单</item>
        <item>通用</item>
        <item>账户</item>
    </string-array>
    <string-array name="preference_language">
        <item>简体中文</item>
        <item>English</item>
    </string-array>
    <string-array name="general_items">
        <item>WiFi</item>
        <item>数据流量</item>
        <item>蓝牙</item>
        <item>飞行模式</item>
        <item>无线热点</item>
        <item>GPS</item>
        <item>音量</item>
        <item>互动效果</item>
        <item>休眠时间</item>
    </string-array>

    <string-array name="shortcuts">
        <item>WiFi</item>
        <item>数据流量</item>
        <item>蓝牙</item>
        <item>飞行模式</item>
        <item>无线热点</item>
        <item>GPS</item>
        <item>流量统计</item>
        <item>亮度</item>
        <item>音量</item>
        <item>休眠时间</item>
        <item>互动效果</item>
        <item>当前运行</item>
        <item>同步设置</item>
        <item>系统信息</item>
        <item>传感器列表</item>
    </string-array>
    <string name="network">连接</string>
    <string name="usage">使用</string>
    <string name="currentApps">正在运行的应用</string>

    <string name="sound">音量</string>
    <string name="alarm">闹钟</string>
    <string name="media">媒体</string>
    <string name="ring">铃声</string>
    <string name="voice">语音</string>
    <string name="brightness">亮度</string>
    <string name="ordinary">正常</string>
    <string name="vibrate">振动</string>
    <string name="silent">静音</string>

    <string name="screenOff">锁屏时间</string>
    <string name="screen15s">15秒</string>
    <string name="screen30s">30秒</string>
    <string name="screen1m">1分钟</string>
    <string name="screen2m">2分钟</string>
    <string name="screen5m">5分钟</string>
    <string name="screen10m">10分钟</string>
    <string name="screen30m">30分钟</string>

    <string-array name="offTime">
        <item>15秒</item>
        <item>30秒</item>
        <item>1分钟</item>
        <item>2分钟</item>
        <item>5分钟</item>
        <item>10分钟</item>
        <item>30分钟</item>
    </string-array>


    <string name="touchShow">互动效果</string>
    <string name="dialTone">拨号键盘触摸音效</string>
    <string name="touchSound">触摸提示音</string>
    <string name="lockSound">锁屏提示音</string>
    <string name="touchVib">触摸时振动</string>

    <string name="all_apps">全部应用</string>
    <string name="system_apps">系统应用</string>
    <string name="user_apps">用户应用</string>

    <string-array name="system_info">
        <item>设备型号</item>
        <item>Android系统版本</item>
        <item>CPU</item>
        <item>CPU使用率</item>
        <item>电池容量</item>
        <item>内存资源</item>
        <item>内部存储</item>
        <item>SD卡存储</item>
    </string-array>

    <string-array name="sensors_list">
        <item>未知</item>
        <item>加速度传感器</item>
        <item>磁力传感器</item>
        <item>方向传感器</item>
        <item>陀螺仪传感器</item>
        <item>光线传感器</item>
        <item>压力传感器</item>
        <item>温度传感器</item>
        <item>距离传感器</item>
        <item>重力传感器</item>
        <item>线性加速度传感器</item>
        <item>旋转矢量传感器</item>
        <item>湿度传感器</item>
        <item>温度传感器</item>
        <item>未校准磁力传感器</item>
        <item>游戏动作传感器</item>
        <item>未校准陀螺仪传感器</item>
        <item>特殊动作触发传感器</item>
        <item>步行检测传感器</item>
        <item>计步传感器</item>
        <item>地磁旋转矢量传感器</item>
    </string-array>

    <string name="profitYesterday">昨日收益</string>
    <string name="profitTotal">总收益</string>
    <string name="battery">当前电量</string>
    <string name="usingTime">预计剩余时间</string>
    <string name="statTest">01234.56789</string>
    <string name="acCharging">AC充电</string>
    <string name="usbCharging">USB充电</string>
    <string name="wirelessCharging">无线充电</string>
    <string name="defaultCharging">未知充电</string>
    <string name="fullBattery">电量满</string>
    <string name="hour">小时</string>
    <string name="minute">分钟</string>
    <string name="not_calculated">正在计算</string>

    <string name="strategy">省电策略</string>
    <string name="detailOption">详细设置</string>
    <string name="customMode">模式定制</string>
    <string name="ranking">耗电排行</string>
    <string name="debug">调试Log</string>

    <string name="auto_saving">自动节能</string>
    <string name="manu_saving">手动节能</string>
    <string name="cancel_saving">取消节能</string>

    <string name="sleep_mode">睡眠模式</string>
    <string name="work_mode">工作模式</string>
    <string name="study_mode">学习模式</string>
    <string name="meeting_mode">会议模式</string>
    <string name="outside_mode">室外模式</string>
    <string name="driving_mode">驾驶模式</string>
    <string name="defined_mode">自定义模式</string>

    <string name="mode_setting">模式设置</string>
    <string name="ordinary_mode">常规模式</string>
    <string name="ordinary_explanation">系统默认保持在常规模式</string>
    <string name="open_mode">开启模式</string>
    <string name="mode_name">模式名称</string>
    <string name="start_time">开始/结束时间</string>
    <string name="end_time">结束时间</string>
    <string name="content_custom">内容定制</string>
    <string name="delete">删除</string>
    <string name="wifi">WiFi</string>
    <string name="bluetooth">蓝牙</string>
    <string name="gprs">数据流量</string>
    <string name="notification_tip">即将进入</string>

    <string name="pleaseLogin">请登录</string>
    <string name="noLogin">未登录</string>
    <string name="login_register">登陆/注册</string>
    <string name="logout">登出</string>
    <string name="sync">数据同步</string>
    <string name="usageRecord">使用记录</string>

    <string-array name="user_interface">
        <item>数据同步</item>
        <item>用户设置</item>
        <item>帮助和反馈</item>
        <item>账户</item>
    </string-array>


    <string name="resAndHelp">帮助和反馈</string>
    <string name="userAccount">账户</string>
    <string name="response">用户反馈</string>
    <string name="help">新手帮助</string>
    <string name="response_tag">选择反馈类型</string>
    <string name="response_function">功能建议</string>
    <string name="response_error">程序错误</string>
    <string name="response_ui">界面建议</string>
    <string name="response_other">其他建议</string>
    <string name="response_content">你的反馈将帮助我们更快地成长</string>
    <string name="response_contact">请输入联系方式（QQ或手机）</string>

    <string-array name="language">
        <item>简体中文</item>
        <item>English</item>
    </string-array>
    <string name="uiPref">界面选项</string>
    <string name="langPref">语言</string>
    <string name="autoSend">自动发送使用信息</string>
    <string name="autoSendHint">帮助我们改善产品体验</string>
    <string name="autoUpdate">自动更新</string>



</resources>
