<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:text="@string/screenOff"
        android:textSize="16sp"
        android:gravity="center"/>
    <RadioGroup
        android:id="@+id/screenGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">
        <RadioButton
            android:id="@+id/screenBtn1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/screen15s"
            android:textSize="16sp"
            android:paddingTop="11dp"
            android:paddingBottom="11dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"/>
        <RadioButton
            android:id="@+id/screenBtn2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/screen30s"
            android:textSize="16sp"
            android:paddingTop="11dp"
            android:paddingBottom="11dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"/>
        <RadioButton
            android:id="@+id/screenBtn3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/screen1m"
            android:textSize="16sp"
            android:paddingTop="11dp"
            android:paddingBottom="11dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"/>
        <RadioButton
            android:id="@+id/screenBtn4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/screen2m"
            android:textSize="16sp"
            android:paddingTop="11dp"
            android:paddingBottom="11dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"/>
        <RadioButton
            android:id="@+id/screenBtn5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/screen5m"
            android:textSize="16sp"
            android:paddingTop="11dp"
            android:paddingBottom="11dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"/>
        <RadioButton
            android:id="@+id/screenBtn6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/screen10m"
            android:textSize="16sp"
            android:paddingTop="11dp"
            android:paddingBottom="11dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"/>
        <RadioButton
            android:id="@+id/screenBtn7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/screen30m"
            android:textSize="16sp"
            android:paddingTop="11dp"
            android:paddingBottom="11dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"/>
     </RadioGroup>

</LinearLayout>