<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sound"
        android:textSize="20sp"
        android:textColor="@color/primary_text"
        android:gravity="center_vertical"
        android:layout_marginBottom="10dp"/>

    <RadioGroup
        android:id="@+id/sound_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/sound_ordinary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ordinary"
            android:textSize="16sp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>
        <RadioButton
            android:id="@+id/sound_vibrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vibrate"
            android:textSize="16sp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>
        <RadioButton
            android:id="@+id/sound_silent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/silent"
            android:textSize="16sp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginTop="10dp">
        <View
            android:layout_height="match_parent"
            android:layout_width="130dp"/>
        <TextView
            android:id="@+id/confirm"
            android:text="@string/OK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary"
            android:textSize="16sp"
            android:background="@drawable/grey_selector"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="end"/>
        <TextView
            android:id="@+id/cancel"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary"
            android:textSize="16sp"
            android:background="@drawable/grey_selector"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="end"/>
    </LinearLayout>

</LinearLayout>