<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/white">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingEnd="10dp"
        android:src="@drawable/custom_notification"
        android:layout_marginEnd="3dp"
        android:layout_marginStart="3dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/notification_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
            android:textSize="14sp"
            android:text="@string/app_name"
            android:layout_margin="5dp"/>
        <LinearLayout
            android:id="@+id/notification_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white">
            <Button
                android:id="@+id/notification_ok"
                android:background="@drawable/button"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:text="@string/OK"
                android:layout_weight="1"
                android:textColor="@color/primary_text"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:id="@+id/notification_cancel"
                android:background="@drawable/button"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:text="@string/cancel"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textColor="@color/primary_text"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:id="@+id/notification_detail"
                android:background="@drawable/button"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:text="@string/detail"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:textColor="@color/primary_text"
                style="?android:attr/buttonBarButtonStyle"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>