<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="24dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/brightness"
        android:textSize="20sp"
        android:textColor="@color/primary_text"
        android:gravity="center_vertical"
        android:layout_marginBottom="10dp"/>

    <com.gc.materialdesign.views.Slider
        android:id="@+id/brightnessSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:layout_below="@+id/title">
    </com.gc.materialdesign.views.Slider>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/brightnessSlider"
        android:layout_alignParentEnd="true">
        <TextView
            android:id="@+id/confirm"
            android:text="@string/OK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary"
            android:textSize="16sp"
            android:background="@drawable/grey_selector"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="end"/>
        <TextView
            android:id="@+id/cancel"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary"
            android:textSize="16sp"
            android:background="@drawable/grey_selector"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="end" />
    </LinearLayout>

</RelativeLayout>